# OhMyDesk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  chat.txt
.agent/: user.md
.agent/skills/bt-api-site-ssl/: SKILL.md
.agent/skills/clickhouse-io/: SKILL.md
.agent/skills/csharp-patterns/: SKILL.md
.agent/skills/deploy/: SKILL.md
.agent/skills/django-patterns/: SKILL.md
.agent/skills/django-security/: SKILL.md
.agent/skills/django-tdd/: SKILL.md
.agent/skills/django-verification/: SKILL.md
.agent/skills/e2e/: SKILL.md
.agent/skills/e2e-testing/: SKILL.md
.agent/skills/frontend-patterns/: SKILL.md
.agent/skills/java-coding-standards/: SKILL.md
.agent/skills/jpa-patterns/: SKILL.md
.agent/skills/nextjs-patterns/: SKILL.md
.agent/skills/php-coding-standards/: SKILL.md
.agent/skills/pm2/: SKILL.md
.agent/skills/postgres-patterns/: SKILL.md
.agent/skills/python-patterns/: SKILL.md
.agent/skills/python-review/: SKILL.md
.agent/skills/python-testing/: SKILL.md
.agent/skills/release/: SKILL.md
.agent/skills/rust-patterns/: SKILL.md
.agent/skills/rust-remote-control-stack/: SKILL.md
.agent/skills/speckit.test/: SKILL.md
.agent/skills/springboot-patterns/: SKILL.md
.agent/skills/springboot-security/: SKILL.md
.agent/skills/springboot-tdd/: SKILL.md
.agent/skills/springboot-verification/: SKILL.md
.agent/skills/typescript-patterns/: SKILL.md
.agent/skills/v0-to-project/: SKILL.md
.ai/: manifest.json
.ai-rules/: checksums  config
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
.specify/scripts/bash/: create-new-feature.sh
docs/: README.md
docs/01-立项/: 立项报告.md
docs/02-需求/: 需求规格说明书.md
docs/03-设计/: Wayland截屏支持评估.md  概要设计说明书.md
docs/04-演示/: 演示脚本.md
docs/05-用户文档/: 用户操作手册.md
docs/06-测试/: AI助手MCP功能测试报告.md  手工验收清单.md
docs/superpowers/: netem-smoke-2026-07.md
docs/superpowers/plans/: 2026-06-27-ohmydesk-mvp-implementation.md  2026-06-27-parallel-dev-orchestration.md  2026-06-30-admin-console-consolidation.md  2026-06-30-client-app-icon.md  2026-06-30-remote-latency-tier1.md  2026-06-30-remote-tools-1-protocol-server.md  2026-06-30-remote-tools-2-slint-client.md  2026-06-30-remote-tools-3-admin-web.md  2026-06-30-v0.1.8-four-features.md  2026-06-30-windows-client-auto-update.md  2026-07-01-client-update-topbar.md  2026-07-01-dirty-region-frameskip-telemetry.md  2026-07-01-encoding-overload-mitigation.md  2026-07-01-suwen-ai-assistant-launcher.md  2026-07-01-v0.4.1-ui-and-session-fixes.md  2026-07-02-simd-jpeg-encode.md  2026-07-02-web-rbac-identity-audit.md  2026-07-03-web-per-account-permissions.md  2026-07-06-resolution-clarity-fps-split.md  2026-07-10-remote-control-chinese-ime.md  2026-07-10-ui-glue-refactor.md
docs/superpowers/review/: 2026-06-27-fifth-release-gate-review.md  2026-06-27-followup-consistency-review.md  2026-06-27-fourth-consistency-review.md  superpowers-review.md
docs/superpowers/specs/: 2026-06-27-feature-spec-mvp.md  2026-06-27-mock-api-contract-and-adapters.md  2026-06-27-tripartite-consistency-analysis.md  2026-06-27-xinchuang-remote-control-design.md  2026-06-30-admin-console-consolidation-design.md  2026-06-30-client-app-icon-design.md  2026-06-30-remote-command-file-chat-design.md  2026-06-30-remote-latency-tier1-design.md  2026-06-30-v0.1.8-four-features-design.md  2026-06-30-v0.1.8-interaction-design.md  2026-06-30-windows-client-auto-update-design.md  2026-07-01-client-update-topbar-design.md  2026-07-01-controlled-chat-session-divergence-bug.md  2026-07-01-dirty-region-frameskip-telemetry-design.md  2026-07-01-encoding-overload-mitigation-design.md  2026-07-01-resize-pipeline-perf-design.md  2026-07-01-suwen-ai-assistant-launcher-design.md  2026-07-02-scroll-wheel-forwarding-design.md  2026-07-02-simd-jpeg-encode-design.md  2026-07-02-web-per-account-permissions-design.md  2026-07-02-web-rbac-identity-audit-design.md  2026-07-06-resolution-clarity-fps-split-design.md  2026-07-10-remote-control-chinese-ime-design.md  2026-07-10-ui-glue-refactor-design.md
packaging/deb/: build-deb.sh
packaging/download/: download.html  publish-update.sh
packaging/download/linux-pkg/: 启动.sh
packaging/macos/: build-macos.sh
packaging/windows/: build-windows.sh
scripts/: pack-submission.sh
scripts/db/: schema.sql  schema.sqlite.sql
scripts/e2e/: README.md  protocol-e2e.mjs  run.sh
scripts/packaging/deb/: build-deb.sh
scripts/packaging/download/: download.html
scripts/packaging/windows/: build-windows.sh
scripts/probes/: README.md  auth.mjs  integration.mjs  reject.mjs
specs/: progress.json
specs/001-client-auth-owner-scope/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-plan.md
specs/001-client-auth-owner-scope/contracts/: contracts.md
src/admin-web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
src/admin-web/src/: App.tsx  index.css  store.ts
src/client/: Cargo.toml  build.rs
src/client/src/: activity.rs  adaptive.rs  asset.rs  capture.rs  chat_notice.rs  credential.rs  cursor.rs  elevate.rs  exec.rs  framediff.rs  geom.rs  history.rs  inject.rs  key_route.rs  login.rs  main.rs  render_mode.rs  suwen.rs  telemetry.rs  transfer.rs  ui_glue.rs  update.rs  workers.rs
src/client/src/net/: conn.rs  dispatch.rs  mod.rs
src/client/src/ui_glue/: chat.rs  chat_notice.rs  control.rs  exec.rs  files.rs  input.rs  login.rs  misc.rs  mod.rs  restore.rs  util.rs
src/client/src/ui_glue/ui_update/: chat_update.rs  conn.rs  frame.rs  mod.rs  session.rs  transfer.rs
src/client/tests/fixtures/: sample-latest.json  sample-latest.json.minisig  test-pub.key
src/client/ui/: app.slint
src/mcp/: package.json  pnpm-lock.yaml  tsconfig.json
src/mcp/src/: client.ts  index.ts  mock.ts  tools.ts  types.ts
src/protocol/: Cargo.toml
src/protocol/src/: lib.rs  tests.rs
src/server/: Cargo.toml
src/server/src/: audit.rs  auth.rs  db.rs  handlers.rs  http.rs  hub.rs  login_log.rs  main.rs  registry.rs  session.rs  settings.rs  users.rs
(+163 files in other folders)
