[workspace]
resolver = "2"
members = ["src/protocol", "src/server", "src/client"]

[workspace.package]
edition = "2021"
version = "0.4.8"

# Wave 0 一次配齐通用依赖；四线各自的特有依赖在各 crate 的 Cargo.toml 内用 cargo add 添加，
# 不回改本根清单（根清单 Wave 0 后冻结，避免 Wave 1 四线并发改根冲突）。
# release 体积优化（客户端分发体积大头）：size 优先 + LTO + 单 codegen 单元 + 去符号。
# 不设 panic="abort"——server 需保留 unwind 容错（请求处理 panic 不应 abort 整进程）。
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# 注：曾试 [profile.release.package.image] opt-level=3 提速图像热路径，实测无效——
# fat LTO(lto=true)+codegen-units=1 会把 per-package opt-level 洗掉，最终机器码优化等级由
# LTO 链接阶段的 "z" 决定(实测 1.03× 提速 / +2.8% 体积，不划算，已撤)。基准测量证实：
# 编码耗时 97% 在 JPEG 编码(纯 Rust 标量)，缩放仅 3% → 真正提速路径是 turbojpeg(SIMD)，另立 spec。

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = "10"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
