[package]
name = "server"
edition.workspace = true
version.workspace = true

[dependencies]
protocol = { path = "../protocol" }
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6"
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
bcrypt = "0.15"
